--- a/manifest.json
+++ b/manifest.json
@@ -6,7 +6,7 @@
   },
   "defaultLocale": "en",
   "private": true,
-  "location": "ticket_sidebar",
+  "location": ["ticket_sidebar", "new_ticket_sidebar"],
   "version": "1.0",
   "frameworkVersion": "1.0"
 }
